# labs-ap

./: CMakeLists.txt  LICENSE  README.md  compile.sh
11-symbolic-data/: CMakeLists.txt  README.md  compile.sh  main.c
12-string-cxx/: CMakeLists.txt  README.md  compile.sh  main.cpp  АП_лаб12.docx
13-text-files-c/: CMakeLists.txt  main.c  АП_лаб13.docx
13-text-files-c/data/: input.txt  output.txt
14-struct-binaries-c/: CMakeLists.txt  README.md  TASK.md  example.cpp  kbin.c  kbin.h  main.c
15-files-cxx/: CMakeLists.txt  README.md  main.cpp
16-cpu-directives/: CMakeLists.txt  main.cpp
17-graphics/: CMakeLists.txt
data/13/: input.txt  output.txt
data/15/: data  data.txt
